--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
+.DS_Store
+
 ### Node ###
 # Logs
+package-lock.json
 logs
 *.log
 npm-debug.log*
