--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -58,14 +58,18 @@ jobs:
           - host: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian-aarch64
-            setup: sudo apt-get install -y libsdl2-dev libsdl2-mixer-dev
+            setup: |
+              dpkg --add-architecture arm64
+              apt-get update
+              apt-get install -y libsdl2-dev:arm64 libsdl2-mixer-dev:arm64
             build: yarn build --target aarch64-unknown-linux-gnu
           - host: ubuntu-latest
             target: armv7-unknown-linux-gnueabihf
             setup: |
-              sudo apt-get update
-              sudo apt-get install gcc-arm-linux-gnueabihf -y
-              sudo apt-get install libsdl2-dev:armhf libsdl2-mixer-dev:armhf -y
+              dpkg --add-architecture armhf
+              apt-get update
+              apt-get install gcc-arm-linux-gnueabihf -y
+              apt-get install -y libsdl2-dev:armhf libsdl2-mixer-dev:armhf
             build: |
               yarn build --target armv7-unknown-linux-gnueabihf
           - host: ubuntu-latest
